--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	</head>
 	<body>
 		<h1>Drivers start your engines!</h1>
+		<p>If you are particularly savvy you would have pressed your gas pedal shortly after &quot2&quot in the countdown! That's right racers, we are serious about having fun, fun on the track that is!</p>
 	</body>
 </html>
