added another <p> element and copy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	</head>
 	<body>
 		<h1>Drivers start your engines!</h1>
-		<p>If you are particularly savvy you would have pressed your gas pedal shortly after &quot2&quot in the countdown! That's right racers, we are serious about having fun, fun on the track that is!</p>
+		<p>If you are particularly savvy you would have pressed your gas pedal shortly
+		after &quot2&quot in the countdown! That's right racers, we are serious about
+		having fun, fun on the track that is!</p>
+		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
+		the advent of this raucous racing title from Nintendo, racers young and old alike
+		have engaged in some of the most haphazard go kart competition ever.</p>
 	</body>
 </html>
