added a secondary heading element

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
 		the advent of this raucous racing title from Nintendo, racers young and old alike
 		have engaged in some of the most haphazard go kart competition ever.</p>
+		<h2>On Your Mark…</h2>
 	</body>
 </html>
