added another <p> element and an <ol> element

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-			<title>The Official Mario Kart Wii Fanpage</title>
+			<title>The Official Mario Kart Wii Fansite</title>
 	</head>
 	<body>
 		<h1>Drivers start your engines!</h1>
@@ -13,5 +13,13 @@
 		the advent of this raucous racing title from Nintendo, racers young and old alike
 		have engaged in some of the most haphazard go kart competition ever.</p>
 		<h2>On Your Mark…</h2>
+		<p>This site aims to celebrate the innocent, yet rowdy and playfully vindictive
+		aspect of Mario Kart Wii. To avoid clutter and confusion (we'll leave that to the
+		racing) we focus on three areas of gameplay:</p>
+		<ol>
+			<li>Character Faves</li>
+			<li>Course Faves</li>
+			<li>Competition</li>
+		</ol>
 	</body>
 </html>
