applied <h3> to <ol> items

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		aspect of Mario Kart Wii. To avoid clutter and confusion (we'll leave that to the
 		racing) we focus on three areas of gameplay:</p>
 		<ol>
-			<li>Character Faves</li>
-			<li>Course Faves</li>
-			<li>Competition</li>
+			<li><h3>Character Faves</h3></li>
+			<li><h3>Course Faves</h3></li>
+			<li><h3>Competition</h3></li>
 		</ol>
 	</body>
 </html>
