used another <p> element under another <h2> element

--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
 			<li><h3>Course Faves</h3></li>
 			<li><h3>Competition</h3></li>
 		</ol>
+		<h2>Get Set…</h2>
+		<p>This is where the familiar avatars shine! Everyone from the sweet looking
+		princesses to the  strangely cute fantastical racers are profiled along with their
+		vehicle options.</p>
 	</body>
 </html>
