copy corrections, line 26

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ol>
 		<h2>Get Set…</h2>
 		<p>This is where the familiar avatars shine! Everyone from the sweet looking
-		princesses to the  strangely cute fantastical racers are profiled along with their
+		princesses to the  strangely cute, fantastical racers are profiled along with their
 		vehicle options.</p>
 	</body>
 </html>
