used an <h3> element to signify a gallery, applied a <ul> element for the gallery

--- a/index.html
+++ b/index.html
@@ -25,5 +25,17 @@
 		<p>This is where the familiar avatars shine! Everyone from the sweet looking
 		princesses to the  strangely cute, fantastical racers are profiled along with their
 		vehicle options.</p>
+		<h3>Characters</h3>
+		<ul>
+			<li>Mario</li>
+			<li>Luigi</li>
+			<li>Toad</li>
+			<li>Yoshi</li>
+			<li>Princess Peach</li>
+			<li>Baby Mario</li>
+			<li>Baby Luigi</li>
+			<li>Wario</li>
+			<li>Waluigi</li>
+		</ul>
 	</body>
 </html>
