used another <h2> and <p> element

--- a/index.html
+++ b/index.html
@@ -37,5 +37,12 @@
 			<li>Wario</li>
 			<li>Waluigi</li>
 		</ul>
+		<h2>GO!</h2>
+		<p>Proof positive, that's what we want! There's nothing like a screen-capture of
+		gamers in the throes of high-speed competition. We have shots of bomb drops, peel
+		placing, red and green turtle shells zinging by, and so much more-even the occasional
+		cliff dive or mushroom missing bounce! We feature our favorite shot-of-the-week
+		and by years end we award someone with a shot-of-the-year trophy!</p>
+		<p>Use the form below to submit a snapshot of your cartoony antics.</p>
 	</body>
 </html>
