inserted my first comment about the top menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1>Drivers start your engines!</h1>
+		<!-- The following <ul> is to be used for a main menu. -->
 		<ul>
 			<li>On Your Mark</li>
 			<li>Get Set</li>
