added first <div> tag for manin navigation

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
 	</head>
 	<body>
 		<h1>Drivers start your engines!</h1>
-		<!-- The following <ul> is to be used for a main menu. -->
+	<div id="mainnav">
 		<ul>
 			<li>On Your Mark</li>
 			<li>Get Set</li>
 			<li>GO!</li>
 		</ul>
+	</div id="mainnav">
 		<p>If you are particularly savvy you would have pressed your gas pedal shortly
 		after &quot2&quot in the countdown! That's right racers, we are serious about
 		having fun, fun on the track that is!</p>
 		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
 		the advent of this raucous racing title from Nintendo, racers young and old alike
-		have engaged in some of the most haphazard go kart competition ever.</p>
+		have engaged in some of the most haphazard go kart competition ever.</p>	
 		<h2>On Your Mark…</h2>
 		<p>This site aims to celebrate the innocent, yet rowdy and playfully vindictive
 		aspect of Mario Kart Wii. To avoid clutter and confusion (we'll leave that to the
