corrected <div> markup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<li>Get Set</li>
 			<li>GO!</li>
 		</ul>
-	</div id="mainnav">
+	</div>
 		<p>If you are particularly savvy you would have pressed your gas pedal shortly
 		after &quot2&quot in the countdown! That's right racers, we are serious about
 		having fun, fun on the track that is!</p>
