--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 			<title>The Official Mario Kart Wii Fansite</title>
+			<link rel="stylesheet href="css/main.css">
 	</head>
 	<body>
 		<h1>Drivers start your engines!</h1>
