--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</ul>
 	</div>
 		<p>If you are particularly savvy you would have pressed your gas pedal shortly
-		after &quot2&quot in the countdown! That's right racers, we are serious about
+		after &quot;2&quot; in the countdown! That's right racers, we are serious about
 		having fun, fun on the track that is!</p>
 		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
 		the advent of this raucous racing title from Nintendo, racers young and old alike
