--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	</head>
 	<body>
 		<h1>Drivers start your engines!</h1>
-	<div id="mainnav">
+	<header>
+		<nav>
 		<ul>
 			<li>On Your Mark</li>
 			<li>Get Set</li>
 			<li>GO!</li>
 		</ul>
-	</div>
+		</nav>
+	</header>
 		<p>If you are particularly savvy you would have pressed your gas pedal shortly
 		after &quot;2&quot; in the countdown! That's right racers, we are serious about
 		having fun, fun on the track that is!</p>
