applying <divs>'s for main content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 			</ul>
 		</nav>
 	</header>
+	<div id="main">
+		<div id="top_main">
+		</div>
+		<div id="middle_main">
+		</div>
+		<div id="bottom_main">
+	</div>
 		<p>If you are particularly savvy you would have pressed your gas pedal shortly
 		after &quot;2&quot; in the countdown! That's right racers, we are serious about
 		having fun, fun on the track that is!</p>
