--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<div id="middle_main">
 		</div>
 		<div id="bottom_main">
+		</div>
 	</div>
 		<p>If you are particularly savvy you would have pressed your gas pedal shortly
 		after &quot;2&quot; in the countdown! That's right racers, we are serious about
