continuing to update markup

--- a/index.html
+++ b/index.html
@@ -15,46 +15,47 @@
 				<li>GO!</li>
 			</ul>
 		</nav>
-	</header>
-	<div id="main">
-		<div id="top_main">
-		</div>
-		<div id="middle_main">
-		</div>
-		<div id="bottom_main">
-		</div>
-	</div>
 		<p>If you are particularly savvy you would have pressed your gas pedal shortly
 		after &quot;2&quot; in the countdown! That's right racers, we are serious about
 		having fun, fun on the track that is!</p>
 		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
 		the advent of this raucous racing title from Nintendo, racers young and old alike
-		have engaged in some of the most haphazard go kart competition ever.</p>	
-		<h2>On Your Mark…</h2>
-		<p>This site aims to celebrate the innocent, yet rowdy and playfully vindictive
-		aspect of Mario Kart Wii. To avoid clutter and confusion (we'll leave that to the
-		racing) we focus on three areas of gameplay:</p>
-		<ol>
-			<li><h3>Character Faves</h3></li>
-			<li><h3>Course Faves</h3></li>
-			<li><h3>Competition</h3></li>
-		</ol>
-		<h2>Get Set…</h2>
-		<p>This is where the familiar avatars shine! Everyone from the sweet looking
-		princesses to the  strangely cute, fantastical racers are profiled along with their
-		vehicle options.</p>
-		<h3>Characters</h3>
-		<ul>
-			<li>Mario</li>
-			<li>Luigi</li>
-			<li>Toad</li>
-			<li>Yoshi</li>
-			<li>Princess Peach</li>
-			<li>Baby Mario</li>
-			<li>Baby Luigi</li>
-			<li>Wario</li>
-			<li>Waluigi</li>
-		</ul>
+		have engaged in some of the most haphazard go kart competition ever.</p>
+	</header>
+	<div id="main">
+		<div id="top_main">
+			<h2>On Your Mark…</h2>
+				<p>This site aims to celebrate the innocent, yet rowdy and playfully vindictive
+				aspect of Mario Kart Wii. To avoid clutter and confusion (we'll leave that to
+				the racing) we focus on three areas of gameplay:</p>
+			<ol>
+				<li><h3>Character Faves</h3></li>
+				<li><h3>Course Faves</h3></li>
+				<li><h3>Competition</h3></li>
+			</ol>
+		</div>
+		<div id="middle_main">
+			<h2>Get Set…</h2>
+				<p>This is where the familiar avatars shine! Everyone from the sweet
+				looking princesses to the  strangely cute, fantastical racers are profiled
+				along with their vehicle options.</p>
+			<h3>Character Gallery</h3>
+				<ul>
+					<li>Mario</li>
+					<li>Luigi</li>
+					<li>Toad</li>
+					<li>Yoshi</li>
+					<li>Princess Peach</li>
+					<li>Baby Mario</li>
+					<li>Baby Luigi</li>
+					<li>Wario</li>
+					<li>Waluigi</li>
+				</ul>
+
+		</div>
+		<div id="bottom_main">
+		</div>
+	</div>
 		<h2>GO!</h2>
 		<p>Proof positive, that's what we want! There's nothing like a screen-capture of
 		gamers in the throes of high-speed competition. We have shots of bomb drops, peel
