--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
 		the advent of this raucous racing title from Nintendo, racers young and old alike
 		have engaged in some of the most haphazard go kart competition ever.</p>
+		<p>This is just a fan site, visit their wiki-page for a more thorough look at Mario
+		Kart on all platforms <a href="http://en.wikipedia.org/wiki/Mario_Kart">here</a>.</p>
 	</header>
 	<div id="main">
 		<div id="top_main">
@@ -51,7 +53,6 @@
 					<li>Wario</li>
 					<li>Waluigi</li>
 				</ul>
-
 		</div>
 		<div id="bottom_main">
 		</div>
