--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				<li>GO!</li>
 			</ul>
 		</nav>
-		<p>If you are particularly savvy you would have pressed your gas pedal shortly
-		after &quot;2&quot; in the countdown! That's right racers, we are serious about
-		having fun, fun on the track that is!</p>
+		<p><strong>If you are particularly savvy</strong> you would have pressed your gas
+		pedal shortly after &quot;2&quot; in the countdown! That's right racers, we are
+		serious about having fun, fun on the track that is!</p>
 		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
 		the advent of this raucous racing title from Nintendo, racers young and old alike
 		have engaged in some of the most haphazard go kart competition ever.</p>
@@ -27,9 +27,9 @@
 	<div id="main">
 		<div id="top_main">
 			<h2>On Your Mark…</h2>
-				<p>This site aims to celebrate the innocent, yet rowdy and playfully vindictive
-				aspect of Mario Kart Wii. To avoid clutter and confusion (we'll leave that to
-				the racing) we focus on three areas of gameplay:</p>
+				<p><strong>This site</strong> aims to celebrate the innocent, yet rowdy and
+				playfully vindictive aspect of Mario Kart Wii. To avoid clutter and confusion
+				(we'll leave that to the racing) we focus on three areas of gameplay:</p>
 			<ol>
 				<li><h3>Character Faves</h3></li>
 				<li><h3>Course Faves</h3></li>
@@ -38,9 +38,9 @@
 		</div>
 		<div id="middle_main">
 			<h2>Get Set…</h2>
-				<p>This is where the familiar avatars shine! Everyone from the sweet
-				looking princesses to the  strangely cute, fantastical racers are profiled
-				along with their vehicle options.</p>
+				<p><strong>This is where</strong> the familiar avatars shine! Everyone from
+				the sweet looking princesses to the  strangely cute, fantastical racers are
+				profiled along with their vehicle options.</p>
 			<h3>Character Gallery</h3>
 				<ul>
 					<li>Mario</li>
@@ -56,7 +56,7 @@
 		</div>
 		<div id="bottom_main">
 			<h2>GO!</h2>
-				<p>Proof positive, that's what we want! There's nothing like a screen-capture
+				<p><strong>Proof positive</strong>, that's what we want! There's nothing like a screen-capture
 				of gamers in the throes of high-speed competition. We have shots of bomb
 				drops, peel placing, red and green turtle shells zinging by, and so much
 				more-even the occasional cliff dive or mushroom missing bounce! We feature
@@ -64,9 +64,12 @@
 				shot-of-the-year trophy!</p>
 				<p>Use the form below to submit a snapshot of your cartoony antics.</p>
 			<section id="form">
+				<div id="cta">
+				</div>
 			</section>
-
 		</div>
+		<footer>
+		</footer>
 	</div>
 	</body>
 </html>
