adding aside and article, also img's to gallery

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 				<li><h3>Course Faves</h3></li>
 				<li><h3>Competition</h3></li>
 			</ol>
+			<aside>
+				<article>
+				</article>
+			</aside>
 		</div>
 		<div id="middle_main">
 			<h2>Get Set…</h2>
@@ -43,7 +47,7 @@
 				profiled along with their vehicle options.</p>
 			<h3>Character Gallery</h3>
 				<ul>
-					<li>Mario</li>
+					<li>Mario<img width="50" height="50"/></li>
 					<li>Luigi</li>
 					<li>Toad</li>
 					<li>Yoshi</li>
@@ -69,6 +73,8 @@
 			</section>
 		</div>
 		<footer>
+			<section id="terms"></section>
+			<section id="copyright"></section>
 		</footer>
 	</div>
 	</body>
