aded another section containing logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 			<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<section id="masthead">
+			<img src="../images/Mario Kart Wii logo.jpg"/>
+		</section>
 		<h1>Drivers start your engines!</h1>
 	<header>
 		<nav>
@@ -48,14 +51,14 @@
 			<h3>Character Gallery</h3>
 				<ul>
 					<li>Mario<img width="50" height="50"/></li>
-					<li>Luigi</li>
-					<li>Toad</li>
-					<li>Yoshi</li>
-					<li>Princess Peach</li>
-					<li>Baby Mario</li>
-					<li>Baby Luigi</li>
-					<li>Wario</li>
-					<li>Waluigi</li>
+					<li>Luigi<img width="50" height="50"/></li>
+					<li>Toad<img width="50" height="50"/></li>
+					<li>Yoshi<img width="50" height="50"/></li>
+					<li>Princess Peach<img width="50" height="50"/></li>
+					<li>Baby Mario<img width="50" height="50"/></li>
+					<li>Baby Luigi<img width="50" height="50"/></li>
+					<li>Wario<img width="50" height="50"/></li>
+					<li>Waluigi<img width="50" height="50"/></li>
 				</ul>
 		</div>
 		<div id="bottom_main">
