correcting logo markup

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	</head>
 	<body>
 		<section id="masthead">
-			<img src="../images/Mario Kart Wii logo.jpg"/>
+			<div id="logo">
+				<img src="../images/Mario Kart Wii logo.jpg"/>
+			</div>
 		</section>
 		<h1>Drivers start your engines!</h1>
 	<header>
