--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<section id="masthead">
 			<div id="logo">
-				<img src="../images/Mario Kart Wii logo.jpg"/>
+				<img src="../images/MarioKartWii_logo.jpg"/>
 			</div>
 		</section>
 		<h1>Drivers start your engines!</h1>
