--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<section id="masthead">
 			<div id="logo">
-				<img src="../images/MarioKartWii_logo.jpg"/>
+				<img src="../images/MarioKartWii_logo.jpg" width="480" height="294"
+				alt="Mario Kart Wii logo" />
 			</div>
 		</section>
 		<h1>Drivers start your engines!</h1>
