updating all img markup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<section id="masthead">
 			<div id="logo">
-				<img src="../images/MarioKartWii_logo.jpg" width="480" height="294"
+				<img src="images/MarioKartWii_logo.jpg" width="480" height="294"
 				alt="Mario Kart Wii logo" />
 			</div>
 		</section>
@@ -53,15 +53,15 @@
 				profiled along with their vehicle options.</p>
 			<h3>Character Gallery</h3>
 				<ul>
-					<li>Mario<img width="50" height="50"/></li>
-					<li>Luigi<img width="50" height="50"/></li>
-					<li>Toad<img width="50" height="50"/></li>
+					<li>Mario<img width="50" height="50" alt="Mario"/></li>
+					<li>Luigi<img width="50" height="50" alt="Luigi"/></li>
+					<li>Toad<img width="50" height="50" alt="Toad"/></li>
 					<li>Yoshi<img width="50" height="50"/></li>
-					<li>Princess Peach<img width="50" height="50"/></li>
-					<li>Baby Mario<img width="50" height="50"/></li>
-					<li>Baby Luigi<img width="50" height="50"/></li>
-					<li>Wario<img width="50" height="50"/></li>
-					<li>Waluigi<img width="50" height="50"/></li>
+					<li>Princess Peach<img width="50" height="50" alt="Princess Peach"/></li>
+					<li>Baby Mario<img width="50" height="50" alt="Baby Mario"/></li>
+					<li>Baby Luigi<img width="50" height="50" alt="Baby Luigi"/></li>
+					<li>Wario<img width="50" height="50" alt="Wario"/></li>
+					<li>Waluigi<img width="50" height="50" alt="Waluigi"/></li>
 				</ul>
 		</div>
 		<div id="bottom_main">
