added some web fonts

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link href='http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400'
+		rel='stylesheet' type='text/css'>
 		<meta charset="utf-8"/>
-			<title>The Official Mario Kart Wii Fansite</title>
+		<title>The Official Mario Kart Wii Fansite</title>
 			<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
