--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<link href="http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400">
+		<link href="http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400"
+		rel="stylesheet" type="text/css">
 		<meta charset="utf-8"/>
 		<title>The Official Mario Kart Wii Fansite</title>
 			<link rel="stylesheet" href="css/main.css">
