adjusting markup to be more readable

--- a/index.html
+++ b/index.html
@@ -13,77 +13,89 @@
 				<img src="images/MarioKartWii_logo.jpg" width="480" height="294"
 				alt="Mario Kart Wii logo"/>
 			</div>
+			<h1>Drivers start your engines!</h1>
 		</section>
-		<h1>Drivers start your engines!</h1>
-	<header>
-		<nav>
-			<ul>
-				<li>On Your Mark</li>
-				<li>Get Set</li>
-				<li>GO!</li>
-			</ul>
-		</nav>
-		<p><strong>If you are particularly savvy</strong> you would have pressed your gas
-		pedal shortly after &quot;2&quot; in the countdown! That's right racers, we are
-		serious about having fun, fun on the track that is!</p>
-		<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii. From
-		the advent of this raucous racing title from Nintendo, racers young and old alike
-		have engaged in some of the most haphazard go kart competition ever.</p>
-		<p>This is just a fan site, visit their wiki-page for a more thorough look at Mario
-		Kart on all platforms <a href="http://en.wikipedia.org/wiki/Mario_Kart">here</a>.</p>
-	</header>
-	<div id="main">
-		<div id="top_main">
-			<h2>On Your Mark…</h2>
-				<p><strong>This site</strong> aims to celebrate the innocent, yet rowdy and
-				playfully vindictive aspect of Mario Kart Wii. To avoid clutter and confusion
-				(we'll leave that to the racing) we focus on three areas of gameplay:</p>
-			<ol>
-				<li><h3>Character Faves</h3></li>
-				<li><h3>Course Faves</h3></li>
-				<li><h3>Competition</h3></li>
-			</ol>
-			<aside>
-				<article>
-				</article>
-			</aside>
-		</div>
-		<div id="middle_main">
-			<h2>Get Set…</h2>
-				<p><strong>This is where</strong> the familiar avatars shine! Everyone from
-				the sweet looking princesses to the  strangely cute, fantastical racers are
-				profiled along with their vehicle options.</p>
-			<h3>Character Gallery</h3>
+
+		<header>
+			<nav>
 				<ul>
-					<li>Mario<img width="50" height="50" alt="Mario"/></li>
-					<li>Luigi<img width="50" height="50" alt="Luigi"/></li>
-					<li>Toad<img width="50" height="50" alt="Toad"/></li>
-					<li>Yoshi<img width="50" height="50"/></li>
-					<li>Princess Peach<img width="50" height="50" alt="Princess Peach"/></li>
-					<li>Baby Mario<img width="50" height="50" alt="Baby Mario"/></li>
-					<li>Baby Luigi<img width="50" height="50" alt="Baby Luigi"/></li>
-					<li>Wario<img width="50" height="50" alt="Wario"/></li>
-					<li>Waluigi<img width="50" height="50" alt="Waluigi"/></li>
+					<li>On Your Mark</li>
+					<li>Get Set</li>
+					<li>GO!</li>
 				</ul>
+			</nav>
+			<p><strong>If you are particularly savvy</strong> you would have pressed your
+			gas pedal shortly after &quot;2&quot; in the countdown! That's right racers,
+			we are serious about having fun, fun on the track that is!</p>
+			<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii.
+			From the advent of this raucous racing title from Nintendo, racers young and
+			old alike have engaged in some of the most haphazard go kart competition
+			ever.</p>
+			<p>This is just a fan site, visit their wiki-page for a more thorough look at
+			Mario Kart on all platforms
+			<a href="http://en.wikipedia.org/wiki/Mario_Kart">here</a>.</p>
+		</header>
+	
+		<div id="main">
+			<div id="top_main">
+				<h2>On Your Mark…</h2>
+					<p><strong>This site</strong> aims to celebrate the innocent, yet
+					rowdy and playfully vindictive aspect of Mario Kart Wii. To avoid
+					clutter and confusion(we'll leave that to the racing) we focus on
+					three areas of gameplay:</p>
+				<ol>
+					<li><h3>Character Faves</h3></li>
+					<li><h3>Course Faves</h3></li>
+					<li><h3>Competition</h3></li>
+				</ol>
+				<aside>
+					<article>
+					</article>
+				</aside>
+			</div>
+		
+			<div id="middle_main">
+				<h2>Get Set…</h2>
+					<p><strong>This is where</strong> the familiar avatars shine! Everyone
+					from the sweet looking princesses to the  strangely cute, fantastical
+					racers are profiled along with their vehicle options.</p>
+				<h3>Character Gallery</h3>
+					<ul>
+						<li>Mario<img width="50" height="50" alt="Mario"/></li>
+						<li>Luigi<img width="50" height="50" alt="Luigi"/></li>
+						<li>Toad<img width="50" height="50" alt="Toad"/></li>
+						<li>Yoshi<img width="50" height="50"/></li>
+						<li>Princess Peach<img width="50" height="50" alt="Princess
+						Peach"/></li>
+						<li>Baby Mario<img width="50" height="50" alt="Baby Mario"/></li>
+						<li>Baby Luigi<img width="50" height="50" alt="Baby Luigi"/></li>
+						<li>Wario<img width="50" height="50" alt="Wario"/></li>
+						<li>Waluigi<img width="50" height="50" alt="Waluigi"/></li>
+					</ul>
+			</div>
+		
+			<div id="bottom_main">
+				<h2>GO!</h2>
+					<p><strong>Proof positive</strong>, that's what we want! There's
+					nothing like a screen-capture of gamers in the throes of high-speed
+					competition. We have shots of bomb drops, peel placing, red and green
+					turtle shells zinging by, and so much more-even the occasional cliff
+					dive or mushroom missing bounce! We feature our favorite
+					shot-of-the-week and by years end we award someone with a
+					shot-of-the-year trophy!</p>
+					<p>Use the form below to submit a snapshot of your cartoony
+					antics.</p>
+				<section id="form">
+					<div id="cta">
+					</div>
+				</section>
+			</div>
+		
+			<footer>
+				<section id="terms"></section>
+				<section id="copyright"></section>
+			</footer>
+		
 		</div>
-		<div id="bottom_main">
-			<h2>GO!</h2>
-				<p><strong>Proof positive</strong>, that's what we want! There's nothing like a screen-capture
-				of gamers in the throes of high-speed competition. We have shots of bomb
-				drops, peel placing, red and green turtle shells zinging by, and so much
-				more-even the occasional cliff dive or mushroom missing bounce! We feature
-				our favorite shot-of-the-week and by years end we award someone with a
-				shot-of-the-year trophy!</p>
-				<p>Use the form below to submit a snapshot of your cartoony antics.</p>
-			<section id="form">
-				<div id="cta">
-				</div>
-			</section>
-		</div>
-		<footer>
-			<section id="terms"></section>
-			<section id="copyright"></section>
-		</footer>
-	</div>
 	</body>
 </html>
