adding images to gallery for html markup

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					racers are profiled along with their vehicle options.</p>
 				<h3>Character Gallery</h3>
 					<ul>
-						<li>Mario<img width="50" height="50" alt="Mario"/></li>
+						<li>Mario<img src="images/mario.png" width="50" height="50" alt="Mario"/></li>
 						<li>Luigi<img width="50" height="50" alt="Luigi"/></li>
 						<li>Toad<img width="50" height="50" alt="Toad"/></li>
 						<li>Yoshi<img width="50" height="50"/></li>
@@ -90,11 +90,13 @@
 					</div>
 				</section>
 			</div>
-		
-			<footer>
-				<section id="terms"></section>
-				<section id="copyright"></section>
-			</footer>
+			
+			<div id="bottom">
+				<footer>
+					<section id="terms"></section>
+					<section id="copyright"></section>
+				</footer>
+			</div>
 		
 		</div>
 	</body>
