textual content edit

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<h2>Get Set…</h2>
 					<p><strong>This is where</strong> the familiar avatars shine! Everyone
 					from the sweet looking princesses to the  strangely cute, fantastical
-					racers are profiled along with their vehicle options.</p>
+					racers are profiled.</p>
 				<h3>Character Gallery</h3>
 					<ul>
 						<li>Mario<img src="images/mario.png" width="50" height="50"
