trouble shooting html markup

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html5>
 <html lang="en">
 	<head>
 		<link href="http://fonts.googleapis.com/css?family=Gafata|Sanchez:400italic,400"
