--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<img src="images/MarioKartWii_logo.jpg" width="240" height="147"
 				alt="Mario Kart Wii logo"/>
 			</div>
-			<h1>Drivers start your engines!</h1>
+			<div id="tagline"><h1>Drivers start your engines!</h1></div>
 		</section>
 
 		<header>
