--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 				<img src="images/MarioKartWii_logo.jpg" width="240" height="147"
 				alt="Mario Kart Wii logo"/>
 			</div>
-			<div id="tagline">Drivers start your engines!</div>
 		</section>
+		<h1>Drivers start your engines!</h1>
 
 		<header>
 			<nav>
