still dinking with h1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				alt="Mario Kart Wii logo"/>
 			</div>
 		</section>
-		<span><h1>Drivers start your engines!</h1></span>
+		<h1>Drivers start your engines!</h1>
 
 		<header>
 			<nav>
