--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 
 		<header>
 			<nav>
-				<ul>
-					<li>On Your Mark</li>
-					<li>Get Set</li>
-					<li>GO!</li>
-				</ul>
+				<div id="main_nav">
+					<ul>
+						<li>On Your Mark</li>
+						<li>Get Set</li>
+						<li>GO!</li>
+					</ul>
+				</div>
 			</nav>
 		</header>
 			<p><strong>If you are particularly savvy</strong> you would have pressed your
