working with h1 css

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
 				</div>
 			</nav>
 		</header>
-			<h1>Drivers start your engines!</h1>
-			<p><strong>If you are particularly savvy</strong> you would have pressed your
-			gas pedal shortly after &quot;2&quot; in the countdown! That's right racers,
-			we are serious about having fun, fun on the track that is!</p>
-			<p>From mini boosts to drifting, we love the recklessness of Mario Kart Wii.
-			From the advent of this raucous racing title from Nintendo, racers young and
-			old alike have engaged in some of the most haphazard go kart competition
-			ever.</p>
-			<p>This is just a fan site, visit their wiki-page for a more thorough look at
-			Mario Kart on all platforms
-			<a href="http://en.wikipedia.org/wiki/Mario_Kart">here</a>.</p>
+			<div id="tagline">
+				<h1>Drivers start your engines!</h1>
+			</div>
+				<p><strong>If you are particularly savvy</strong> you would have pressed
+				your gas pedal shortly after &quot;2&quot; in the countdown! That's right
+				racers, we are serious about having fun, fun on the track that is!</p>
+				<p>From mini boosts to drifting, we love the recklessness of Mario Kart
+				Wii. From the advent of this raucous racing title from Nintendo, racers
+				young and old alike have engaged in some of the most haphazard go kart
+				competition ever.</p>
+				<p>This is just a fan site, visit their wiki-page for a more thorough look
+				at Mario Kart on all platforms
+				<a href="http://en.wikipedia.org/wiki/Mario_Kart">here</a>.</p>
 	
 		<div id="main">
 			<div id="top_main">
