trying to color body for visibility

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<div id="wrapper">
 		<section id="masthead">
 			<div id="logo">
 				<img src="images/MarioKartWii_logo.jpg" width="240" height="147"
@@ -110,5 +111,6 @@
 			</div>
 		
 		</div>
+	</div> /* end "wrapper"*/
 	</body>
 </html>
