playing with logo and main nav

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<body>
 		<div id="wrapper">
 		<header>
-			<section id="masthead">
+		/*	<section id="masthead">
 				<div id="logo">
 					<img src="images/MarioKartWii_logo.jpg" width="200" height="122.5"
 					alt="Mario Kart Wii logo"/>
-				</div>
+				</div> */
 			</section>
 			<nav>
 				<div id="main_nav">
