--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<body>
 		<div id="wrapper">
 		<header>
-		/*	<section id="masthead">
+			<!-- <section id="masthead">
 				<div id="logo">
 					<img src="images/MarioKartWii_logo.jpg" width="200" height="122.5"
 					alt="Mario Kart Wii logo"/>
-				</div> */
-			</section>
+				</div>
+			</section> -->
 			<nav>
 				<div id="main_nav">
 					<ul>
@@ -110,6 +110,6 @@
 			</div>
 		
 		</div>
-	</div> /* end "wrapper"*/
+	</div> <!--end "wrapper"-->
 	</body>
 </html>
