html main nav edits

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<nav>
 				<div id="main_nav">
 					<ul>
-						<li>On Your Mark</li>
-						<li>Get Set</li>
+						<li>ON YOUR MARK</li>
+						<li>GET SET</li>
 						<li>GO!</li>
 					</ul>
 				</div>
