--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 		</header>
 				<p><strong>If you are particularly savvy</strong> you would have pressed
 				your gas pedal shortly after &quot;2&quot; in the countdown! That's right
-				racers, we are serious about having fun, fun on the track that is!</p>
+				racers, we are serious about having fun, fun in a sort of sadistic, beam
+				your enemy with a turtle shell way that is!</p>
 				<p>From mini boosts to drifting, we love the recklessness of Mario Kart
 				Wii. From the advent of this raucous racing title from Nintendo, racers
 				young and old alike have engaged in some of the most haphazard go kart
