editing html to show cta color

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 					antics.</p>
 				<section id="form">
 					<div id="cta">
+					<p>Call to action coming soon.</p>
 					</div>
 				</section>
 			</div>
