modify html and css for character gallery to apply color and opacity

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 					<p><strong>This is where</strong> the familiar avatars shine! Everyone
 					from the sweet looking princesses to the  strangely cute, fantastical
 					racers are profiled.</p>
+				<div id="char_gal">
 				<h3>Character Gallery</h3>
 					<ul>
 						<li>Mario<img src="images/mario.png" width="50" height="50"
@@ -84,6 +85,7 @@
 						<li>Waluigi<img src="images/luigi.png" width="50" height="50"
 						alt="Waluigi"/></li>
 					</ul>
+				</div> <!-- end of "char_gal" -->
 			</div>
 		
 			<div id="bottom_main">
