corrected label of image in the gallery

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						alt="Baby Luigi"/></li>
 						<li>Wario<img src="images/wario.png" width="50" height="50"
 						alt="Wario"/></li>
-						<li>Waluigi<img src="images/luigi.png" width="50" height="50"
+						<li>Waluigi<img src="images/waluigi.png" width="50" height="50"
 						alt="Waluigi"/></li>
 					</ul>
 				</div> <!-- end of "char_gal" -->
