--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<nav>
 				<div id="main_nav">
 					<ul>
-						<li>ON YOUR MARK</li>
-						<li>GET SET</li>
-						<li>GO!</li>
+						<a href="#mark"><li>ON YOUR MARK</li></a>
+						<a href="#set"><li>GET SET</li></a>
+						<a href="#go"><li>GO!</li></a>
 					</ul>
 				</div>
 			</nav>
@@ -43,7 +43,7 @@
 	
 		<div id="main">
 			<div id="top_main">
-				<h2>On Your Mark…</h2>
+				<a name="mark"><h2>On Your Mark…</h2></A>
 					<p><strong>This site</strong> aims to celebrate the innocent, yet
 					rowdy and playfully vindictive aspect of Mario Kart Wii. To avoid
 					clutter and confusion(we'll leave that to the racing) we focus on
@@ -60,7 +60,7 @@
 			</div>
 		
 			<div id="middle_main">
-				<h2>Get Set…</h2>
+				<a name="set"><h2>Get Set…</h2></A>
 					<p><strong>This is where</strong> the familiar avatars shine! Everyone
 					from the sweet looking princesses to the  strangely cute, fantastical
 					racers are profiled.</p>
@@ -89,7 +89,7 @@
 			</div>
 		
 			<div id="bottom_main">
-				<h2>GO!</h2>
+				<a name="go"><h2>GO!</h2></A>
 					<p><strong>Proof positive</strong>, that's what we want! There's
 					nothing like a screen-capture of gamers in the throes of high-speed
 					competition. We have shots of bomb drops, peel placing, red and green
