removed char_gal formatting in html and added proper css

--- a/index.html
+++ b/index.html
@@ -67,24 +67,23 @@
 				<div id="char_gal">
 				<h3>Character Gallery</h3>
 					<ul>
-						<li type=circle>Mario<img src="images/mario.png" width="50"
-						height="50" alt="Mario"/></li>
-						<li type=circle>Luigi<img src="images/luigi.png" width="50"
-						height="50" alt="Luigi"/></li>
-						<li type=circle>Toad<img src="images/toad.png" width="50"
-						height="50" alt="Toad"/></li>
-						<li type=circle>Yoshi<img src="images/yoshi.png" width="50"
-						height="50"/></li>
-						<li type=circle>Princess Peach<img src="images/peach.png"
-						width="50" height="50" alt="Princess Peach"/></li>
-						<li type=circle>Baby Mario<img src="images/b_mario.png" width="50"
-						height="50" alt="Baby Mario"/></li>
-						<li type=circle>Baby Luigi<img src="images/b_luigi.png" width="50"
-						height="50" alt="Baby Luigi"/></li>
-						<li type=circle>Wario<img src="images/wario.png" width="50"
-						height="50" alt="Wario"/></li>
-						<li type=circle>Waluigi<img src="images/waluigi.png" width="50"
-						height="50" alt="Waluigi"/></li>
+						<li>Mario<img src="images/mario.png" width="50" height="50"
+						alt="Mario"/></li>
+						<li>Luigi<img src="images/luigi.png" width="50" height="50"
+						alt="Luigi"/></li>
+						<li>Toad<img src="images/toad.png" width="50" height="50"
+						alt="Toad"/></li>
+						<li>Yoshi<img src="images/yoshi.png" width="50" height="50"/></li>
+						<li>Princess Peach<img src="images/peach.png" width="50"
+						height="50" alt="Princess Peach"/></li>
+						<li>Baby Mario<img src="images/b_mario.png" width="50" height="50"
+						alt="Baby Mario"/></li>
+						<li>Baby Luigi<img src="images/b_luigi.png" width="50" height="50"
+						alt="Baby Luigi"/></li>
+						<li>Wario<img src="images/wario.png" width="50" height="50"
+						alt="Wario"/></li>
+						<li>Waluigi<img src="images/waluigi.png" width="50" height="50"
+						alt="Waluigi"/></li>
 					</ul>
 				</div> <!-- end of "char_gal" -->
 			</div>
