attempting to create horizontal gallery

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 					<p><strong>This is where</strong> the familiar avatars shine! Everyone
 					from the sweet looking princesses to the  strangely cute, fantastical
 					racers are profiled.</p>
+<!-- begin character gallery -->
 				<div id="char_gal">
 				<h3>Character Gallery</h3>
 					<ul>
@@ -85,7 +86,8 @@
 						<li>Waluigi<img src="images/waluigi.png" width="50" height="50"
 						alt="Waluigi"/></li>
 					</ul>
-				</div> <!-- end of "char_gal" -->
+				</div>
+<!-- end character gallery -->
 			</div>
 		
 			<div id="bottom_main">
