adjusted html for a element

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	
 		<div id="main">
 			<div id="top_main">
-				<a name="mark"><h2>On Your Mark…</h2></A>
+				<a name="mark"><h2>On Your Mark…</h2></a>
 					<p><strong>This site</strong> aims to celebrate the innocent, yet
 					rowdy and playfully vindictive aspect of Mario Kart Wii. To avoid
 					clutter and confusion(we'll leave that to the racing) we focus on
@@ -60,7 +60,7 @@
 			</div>
 		
 			<div id="middle_main">
-				<a name="set"><h2>Get Set…</h2></A>
+				<a name="set"><h2>Get Set…</h2></a>
 					<p><strong>This is where</strong> the familiar avatars shine! Everyone
 					from the sweet looking princesses to the  strangely cute, fantastical
 					racers are profiled.</p>
@@ -91,7 +91,7 @@
 			</div>
 		
 			<div id="bottom_main">
-				<a name="go"><h2>GO!</h2></A>
+				<a name="go"><h2>GO!</h2></a>
 					<p><strong>Proof positive</strong>, that's what we want! There's
 					nothing like a screen-capture of gamers in the throes of high-speed
 					competition. We have shots of bomb drops, peel placing, red and green
