added div to anchor
hoping to eliminate color or response to anchors (3)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	
 		<div id="main">
 			<div id="top_main">
-				<a name="mark"><h2>On Your Mark…</h2></a>
+				<div id="anchor_one"><a name="mark"><h2>On Your Mark…</h2></a></div>
 					<p><strong>This site</strong> aims to celebrate the innocent, yet
 					rowdy and playfully vindictive aspect of Mario Kart Wii. To avoid
 					clutter and confusion(we'll leave that to the racing) we focus on
