--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
 				<div id="char_gal">
 				<h3>Character Gallery</h3>
 					<ul>
-						<li>Mario<img src="images/mario.png" width="50" height="50"
+						<li><img src="images/mario.png" width="50" height="50"
 						alt="Mario"/></li>
-						<li>Luigi<img src="images/luigi.png" width="50" height="50"
+						<li><img src="images/luigi.png" width="50" height="50"
 						alt="Luigi"/></li>
-						<li>Toad<img src="images/toad.png" width="50" height="50"
+						<li><img src="images/toad.png" width="50" height="50"
 						alt="Toad"/></li>
-						<li>Yoshi<img src="images/yoshi.png" width="50" height="50"/></li>
-						<li>Princess Peach<img src="images/peach.png" width="50"
+						<li><img src="images/yoshi.png" width="50" height="50"/></li>
+						<li><img src="images/peach.png" width="50"
 						height="50" alt="Princess Peach"/></li>
-						<li>Baby Mario<img src="images/b_mario.png" width="50" height="50"
+						<li><img src="images/b_mario.png" width="50" height="50"
 						alt="Baby Mario"/></li>
-						<li>Baby Luigi<img src="images/b_luigi.png" width="50" height="50"
+						<li><img src="images/b_luigi.png" width="50" height="50"
 						alt="Baby Luigi"/></li>
-						<li>Wario<img src="images/wario.png" width="50" height="50"
+						<li><img src="images/wario.png" width="50" height="50"
 						alt="Wario"/></li>
-						<li>Waluigi<img src="images/waluigi.png" width="50" height="50"
+						<li><img src="images/waluigi.png" width="50" height="50"
 						alt="Waluigi"/></li>
 					</ul>
 				</div>
