attempting to css a two level gallery

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 				<div id="char_gal">
 				<h3>Character Gallery</h3>
 					<ul>
+					<div id="char_gal_one">
 						<li><img src="images/mario.png" width="50" height="50"
 						alt="Mario"/></li>
 						<li><img src="images/luigi.png" width="50" height="50"
@@ -77,6 +78,8 @@
 						<li><img src="images/yoshi.png" width="50" height="50"/></li>
 						<li><img src="images/peach.png" width="50"
 						height="50" alt="Princess Peach"/></li>
+					</div> <!-- end gal one -->
+					<div id="char_gal_two">
 						<li><img src="images/b_mario.png" width="50" height="50"
 						alt="Baby Mario"/></li>
 						<li><img src="images/b_luigi.png" width="50" height="50"
@@ -85,6 +88,7 @@
 						alt="Wario"/></li>
 						<li><img src="images/waluigi.png" width="50" height="50"
 						alt="Waluigi"/></li>
+					</div> <!-- end gal two -->
 					</ul>
 				</div>
 <!-- end character gallery -->
