activate visited color css, added html content

--- a/index.html
+++ b/index.html
@@ -50,8 +50,22 @@
 					three areas of gameplay:</p>
 				<ol>
 					<li><h3>Character Faves</h3></li>
+					<p>We have our own race time avatar. Some like the main guys, others
+					live vicariously through their evil alter egos like Waluigi. We
+					highlight some perennial faves as well as dark horses. Perhaps you may
+					change your mind about who your favorite really is!</P
 					<li><h3>Course Faves</h3></li>
+					<p>Each character has a course, or courses,that they should shine on.
+					The truth is, each course has different playability as the settings
+					are tweaked. For example, one advantaged racer on a particular
+					course loses their edge when the item style is altered (curse you
+					first place turtle shell!).</p>
 					<li><h3>Competition</h3></li>
+					<p>Their are tips and tricks to beating out the other racers, albeit
+					few and fairly well known. However, competition still has a lure that
+					is difficult to ignore, especially when your five year old is kicking
+					booty chaw - your booty, that is!</p>
+					<p>
 				</ol>
 				<aside>
 					<article>
