added columns to middle section
at least attempting to

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					rowdy and playfully vindictive aspect of Mario Kart Wii. To avoid
 					clutter and confusion(we'll leave that to the racing) we focus on
 					three areas of gameplay:</p>
-				<ol>
+				<div id="categories"><ol>
 					<li><h3>Character Faves</h3></li>
 					<p>We have our own race time avatar. Some like the main guys, others
 					live vicariously through their evil alter egos like Waluigi. We
@@ -66,6 +66,7 @@
 					is difficult to ignore, especially when your five year old is kicking
 					booty chaw - your booty, that is!</p>
 					<p>
+				</div> <!-- end categories -->
 				</ol>
 				<aside>
 					<article>
