editing categories content in html

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 					highlight some perennial faves as well as dark horses. Perhaps you may
 					change your mind about who your favorite really is!</P
 					<li><h3>Course Faves</h3></li>
-					<p>Each character has a course, or courses,that they should shine on.
-					The truth is, each course has different playability as the settings
-					are tweaked. For example, one advantaged racer on a particular
-					course loses their edge when the item style is altered (curse you
-					first place turtle shell!).</p>
+					<p>Each character has a course(s) that they should shine on. The truth
+					is, each course has different playability as the settings are tweaked.
+					For example, one advantaged racer on a particular course loses their
+					edge when the item style is altered (curse you first place turtle
+					shell!).</p>
 					<li><h3>Competition</h3></li>
 					<p>Their are tips and tricks to beating out the other racers, albeit
 					few and fairly well known. However, competition still has a lure that
