--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<ul>
 					<div id="char_gal_one">
 						<li><img src="images/mario.png" width="50" height="50"
-						alt="Mario"/></li>
+						title="Mario" alt="Mario"/></li>
 						<li><img src="images/luigi.png" width="50" height="50"
 						alt="Luigi"/></li>
 						<li><img src="images/toad.png" width="50" height="50"
