--- a/index.html
+++ b/index.html
@@ -87,24 +87,26 @@
 						<li><img src="images/mario.png" width="50" height="50"
 						title="Mario" alt="Mario"/></li>
 						<li><img src="images/luigi.png" width="50" height="50"
-						alt="Luigi"/></li>
+						title="Luigi" alt="Luigi"/></li>
 						<li><img src="images/toad.png" width="50" height="50"
-						alt="Toad"/></li>
-						<li><img src="images/yoshi.png" width="50" height="50"/></li>
+						title="Toad" alt="Toad"/></li>
+						<li><img src="images/yoshi.png" width="50" height="50"
+						title="Yoshi" alt="Yoshi"/></li>
 						<li><img src="images/peach.png" width="50"
-						height="50" alt="Princess Peach"/></li>
+						height="50" alt="Princess Peach" title="Princess Peach"
+						alt="Princess Peach"/></li>
 					</div> <!-- end gal one -->
 					</ul>
 					<ul>
 					<div id="char_gal_two">
 						<li><img src="images/b_mario.png" width="50" height="50"
-						alt="Baby Mario"/></li>
+						title="Baby Mario" alt="Baby Mario"/></li>
 						<li><img src="images/b_luigi.png" width="50" height="50"
-						alt="Baby Luigi"/></li>
+						title="baby Luigi" alt="Baby Luigi"/></li>
 						<li><img src="images/wario.png" width="50" height="50"
-						alt="Wario"/></li>
+						title="Wario" alt="Wario"/></li>
 						<li><img src="images/waluigi.png" width="50" height="50"
-						alt="Waluigi"/></li>
+						title="Waluigi" alt="Waluigi"/></li>
 					</div> <!-- end gal two -->
 					</ul>
 				</div>
