adjust h and w of images so border properly contains them

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<li><img src="images/b_mario.png" width="50" height="50"
 						title="Baby Mario" alt="Baby Mario"/></li>
 						<li><img src="images/b_luigi.png" width="50" height="50"
-						title="baby Luigi" alt="Baby Luigi"/></li>
+						title="Baby Luigi" alt="Baby Luigi"/></li>
 						<li><img src="images/wario.png" width="50" height="50"
 						title="Wario" alt="Wario"/></li>
 						<li><img src="images/waluigi.png" width="50" height="50"
