attempting gradient button css and html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			</section>
 			<nav>
 				<div id="main_nav">
+					<a href="#" class="button red small">Small</a> 
 					<ul>
 						<a href="#mark"><li>ON YOUR MARK</li></a>
 						<a href="#set"><li>GET SET</li></a>
