updating button anchor href

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<nav>
 				<div id="main_nav">
 					<ul>
-						<a href="mark" class="button red small">ON YOUR MARK</a>
-						<a href="set" class="button red small">GET SET</a>
-						<a href="go" class="button red small">GO!</a>
+						<a href="#mark" class="button red small">ON YOUR MARK</a>
+						<a href="#set" class="button red small">GET SET</a>
+						<a href="#go" class="button red small">GO!</a>
 					</ul>
 				</div>
 			</nav>
