cusyomizing main nav
to resemble a red, yellow/orange, green start light

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<div id="main_nav">
 					<ul>
 						<a href="#mark" class="button red small">ON YOUR MARK</a>
-						<a href="#set" class="button red small">GET SET</a>
-						<a href="#go" class="button red small">GO!</a>
+						<a href="#set" class="button orange small">GET SET</a>
+						<a href="#go" class="button green small">GO!</a>
 					</ul>
 				</div>
 			</nav>
